--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
         </svg>
       </a>
 
+    {% if false %}
       <div class="trigger">
         {% for my_page in site.pages %}
           {% if my_page.title %}
@@ -20,6 +21,7 @@
           {% endif %}
         {% endfor %}
       </div>
+    {% endif %}
     </nav>
 
   </div>
