--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,20 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 
+#main {
+  float:left;
+  width:70%;
+}
+
+#sidebar {
+  float:right;
+  width:25%;
+}
+
+//#sidebar .trigger a {
+//  border-bottom: 1px solid #ccc;
+//}
+
 
 // Use media queries like this:
 // @include media-query($on-palm) {
