--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -141,14 +141,20 @@
     width:         calc(45% - (#{$spacing-unit} / 2));
 }
 
+.footer-col-3 p {
+    float: right;
+}
+
 @include media-query($on-laptop) {
     .footer-col-1,
     .footer-col-2 {
+        float: left;
         width: -webkit-calc(50% - (#{$spacing-unit} / 2));
         width:         calc(50% - (#{$spacing-unit} / 2));
     }
 
     .footer-col-3 {
+        float: right;
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
     }
