--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">{{ site.home_title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -13,7 +13,6 @@
         </svg>
       </a>
 
-    {% if false %}
       <div class="trigger">
         {% for my_page in site.pages %}
           {% if my_page.title %}
@@ -21,7 +20,6 @@
           {% endif %}
         {% endfor %}
       </div>
-    {% endif %}
     </nav>
 
   </div>
