--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,12 +11,12 @@
 }
 
 .site-title {
+    float: left;
     font-size: 26px;
     font-weight: 300;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
-    float: left;
 
     &,
     &:visited {
@@ -26,6 +26,8 @@
 
 .site-nav {
     float: right;
+    font-size: 22px;
+    font-weight: 300;
     line-height: 56px;
 
     .menu-icon {
