--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,11 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 
+#main-full {
+  float:left;
+  width:100%;
+}
+
 #main {
   float:left;
   width:75%;
